Align button correctly and offset 1px because of Bootstrap css
Because it being misaligned triggers my OCD

--- a/src/components/GitAppsSidebar/GitAppsSidebar.scss
+++ b/src/components/GitAppsSidebar/GitAppsSidebar.scss
@@ -97,6 +97,7 @@
     box-shadow: none !important;
     background-color: #366AC8;
     color: #fff;
+    margin-left: 1px !important;
 }
 
 .gitApps-sideDrawer-submit-button:hover{
